--- a/playground/layouts/ContainerSideBar.html
+++ b/playground/layouts/ContainerSideBar.html
@@ -2,7 +2,7 @@
 <link href="../../src/themes/day.css" rel="stylesheet" type="text/css" />
 <link href="../../src/themes/night.css" rel="stylesheet" type="text/css" />
 <link href="../../src/css/sgds.css" rel="stylesheet" type="text/css" />
-<link href="..//css/utility.css" rel="stylesheet" type="text/css" />
+<link href="../css/utility.css" rel="stylesheet" type="text/css" />
 
 <body>
   <div class="sgds:sticky sgds:top-0">
@@ -18,7 +18,7 @@
     </div>
     <div class="sgds:flex sgds:flex-col sgds:w-full ">
       <div class="sgds-container-sidebar sgds:py-2-xl">
-        <div id="content" class="sgds:bg-translucent-subtle sgds:h-250 sgds:w-full">
+        <div id="content" class="sgds:bg-translucent-subtle sgds:h-500 sgds:w-full">
           Place content here
         </div>
       </div>
@@ -26,4 +26,5 @@
     </div>
   </div>
 </body>
+
 
